# speckle-pylon-cross-platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  DaqThread.preprocessed.cpp  LESSONS_LEARNED.md  PROGRESS.md  README.md  TASKS.md  UI_TEST.md  specklewindow.preprocessed.cpp  tasklist.md  todo.md
.github/workflows/: ci.yml
src/: CImg.h  DOPulseGenerator.cpp  DOPulseGenerator.h  DaqThread.cpp  DaqThread.h  FLSCI.lib  FrameGrabberClass.cpp  FrameGrabberClass.h  HistogramWindow.cpp  HistogramWindow.h  LogitechClass.cpp  LogitechClass.h  ProcessingThread.cpp  ProcessingThread.h  SCVideoWriter.cpp  SCVideoWriter.h  SpeckleOverlayClass.cpp  SpeckleOverlayClass.h  SpeckleROIClass.cpp  SpeckleROIClass.h  SpeckleSettings.cpp  SpeckleSettings.h  SpeckleSettings.ui  ThorlabsClass.cpp  ThorlabsClass.h  Unibrain.h  WriteSCThread.cpp  WriteSCThread.h  WriteThread.cpp  WriteThread.h  WriteVideoThread.cpp  WriteVideoThread.h  acquisitionclass.cpp  acquisitionclass.h  autumn_colormap.h  camera.cpp  camera.h  cameradescription.cpp  cameradescription.h  common.h  (+55 more)
util/: Greens.mat  pmkmp_CubicYF.mat  write_colormap_as_header.m
